Fixed touch scroll on mobile devices

--- a/css/wheelcolorpicker.css
+++ b/css/wheelcolorpicker.css
@@ -1,10 +1,10 @@
 /**
- * jQuery Wheel Color Picker
+ * Wheel Color Picker for jQuery
  * Base Stylesheet
  * 
- * http://www.jar2.net/projects/jquery-wheelcolorpicker
+ * https://raffer.one/projects/jquery-wheelcolorpicker
  * 
- * Copyright © 2011-2016 Fajar Chandra. All rights reserved.
+ * Copyright © 2011-2019 Fajar Chandra. All rights reserved.
  * Released under MIT License.
  * http://www.opensource.org/licenses/mit-license.php
  * 
@@ -13,78 +13,79 @@
  */
 
 .jQWCP-wWidget {
-	position: absolute;
-	width: 250px;
-	height: 180px;
-	background: #eee;
-	box-shadow: 1px 1px 4px rgba(0,0,0,.5);
-	border-radius: 4px;
-	border: solid 1px #aaa;
-	padding: 10px;
-	z-index: 1001;
+  position: absolute;
+  width: 250px;
+  height: 180px;
+  background: #eee;
+  box-shadow: 1px 1px 4px rgba(0,0,0,.5);
+  border-radius: 4px;
+  border: solid 1px #aaa;
+  padding: 10px;
+  z-index: 1001;
+  touch-action: none;
 }
 
 .jQWCP-wWidget.jQWCP-block {
-	position: relative;
-	border-color: #aaa;
-	box-shadow: inset 1px 1px 1px #ccc;
+  position: relative;
+  border-color: #aaa;
+  box-shadow: inset 1px 1px 1px #ccc;
 }
 
 .jQWCP-wWheel {
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: contain;
-	position: relative;
-	float: left;
-	width: 180px;
-	height: 180px;
-	-webkit-border-radius: 90px;
-	-moz-border-radius: 50%;
-	border-radius: 50%;
-	border: solid 1px #aaa;
-	margin: -1px;
-	margin-right: 10px;
-	transition: border .15s;
-	cursor: crosshair;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  position: relative;
+  float: left;
+  width: 180px;
+  height: 180px;
+  -webkit-border-radius: 90px;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  border: solid 1px #aaa;
+  margin: -1px;
+  margin-right: 10px;
+  transition: border .15s;
+  cursor: crosshair;
 }
 
 .jQWCP-wWheel:hover {
-	border-color: #666;
+  border-color: #666;
 }
 
 .jQWCP-wWheelOverlay {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: #000;
-	opacity: 0;
-	-webkit-border-radius: 90px;
-	-moz-border-radius: 50%;
-	border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: 0;
+  -webkit-border-radius: 90px;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
 }
 
 .jQWCP-wWheelCursor {
-	width: 8px;
-	height: 8px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin: -6px -6px;
-	cursor: crosshair;
-	border: solid 2px #fff;
-	box-shadow: 1px 1px 2px #000;
-	border-radius: 50%;
+  width: 8px;
+  height: 8px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -6px -6px;
+  cursor: crosshair;
+  border: solid 2px #fff;
+  box-shadow: 1px 1px 2px #000;
+  border-radius: 50%;
 }
 
 .jQWCP-slider-wrapper,
 .jQWCP-wPreview {
-	position: relative;
-	width: 20px;
-	height: 180px;
-	float: left;
-	margin-right: 10px;
+  position: relative;
+  width: 20px;
+  height: 180px;
+  float: left;
+  margin-right: 10px;
 }
 
 .jQWCP-wWheel:last-child,
@@ -95,52 +96,52 @@
 
 .jQWCP-slider,
 .jQWCP-wPreviewBox {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	left: 0;
-	top: 0;
-	box-sizing: border-box;
-	border: solid 1px #aaa;
-	margin: -1px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-	transition: border .15s;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  box-sizing: border-box;
+  border: solid 1px #aaa;
+  margin: -1px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  transition: border .15s;
 }
 
 .jQWCP-slider {
-	cursor: crosshair;
+  cursor: crosshair;
 }
 
 .jQWCP-slider-wrapper:hover .jQWCP-slider {
-	border-color: #666;
+  border-color: #666;
 }
 
 .jQWCP-scursor {
-	position: absolute;
-	left: 0;
-	top: 0;
-	right: 0;
-	height: 6px;
-	margin: -5px -1px -5px -3px;
-	cursor: crosshair;
-	border: solid 2px #fff;
-	box-shadow: 1px 1px 2px #000;
-	border-radius: 4px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  height: 6px;
+  margin: -5px -1px -5px -3px;
+  cursor: crosshair;
+  border: solid 2px #fff;
+  box-shadow: 1px 1px 2px #000;
+  border-radius: 4px;
 }
 
 .jQWCP-wAlphaSlider,
 .jQWCP-wPreviewBox {
-	background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAQMAAAAlPW0iAAAABlBMVEVAQEB/f39eaJUuAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH3QYRBDgK9dKdMgAAABl0RVh0Q29tbWVudABDcmVhdGVkIHdpdGggR0lNUFeBDhcAAAARSURBVAjXY/jPwIAVYRf9DwB+vw/x6vMT1wAAAABJRU5ErkJggg==') center center;
+  background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAQMAAAAlPW0iAAAABlBMVEVAQEB/f39eaJUuAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH3QYRBDgK9dKdMgAAABl0RVh0Q29tbWVudABDcmVhdGVkIHdpdGggR0lNUFeBDhcAAAARSURBVAjXY/jPwIAVYRf9DwB+vw/x6vMT1wAAAABJRU5ErkJggg==') center center;
 }
 
 .jQWCP-overlay {
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 1000;
 }
 
 /*********************/
